Prevent compositor queue starvation.

Create a new TaskQueue priority LOW_PRIORITY which runs less frequently than
NORMAL but unlike BEST_EFFORT, is guaranteed to run.

When in UseCase::COMPOSITOR_GESTURE, set the compositor TaskQueue to
LOW_PRIORITY rather than BEST_EFFORT.

When choosing whether to unblock a previously starved queue, use a score rather
task count now that we have different priorities to unblock.

Bug: 725850
Change-Id: I08af91032d658e80ed5ef0956d4ad826a84c1635
Reviewed-on: https://chromium-review.googlesource.com/515542
Commit-Queue: Dan Elphick <delphick@chromium.org>
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#475950}
Former-commit-id: bd8aaee01b0dcf66a19f52ec97d63700a8b4c66a